Fixed layout issues caused by nav changes

--- a/packages/common/src/assets/styles/_layout.scss
+++ b/packages/common/src/assets/styles/_layout.scss
@@ -104,12 +104,12 @@
 
 .page-container {
   // display: flex;
-  // flex: 1 1 auto;
+  flex: 1;
   &--panels {
     display: flex;
     height: 100%;
   }
-  min-height: 100%;
+  // min-height: 100%;
 }
 
 .page-panel {
